Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h

#define PE_ERR_DATABASESESSION              535
#define PE_ERR_DATABASELOGON                536
#define PE_ERR_DATABASELOCATION             537
#define PE_ERR_NOTIMPLEMENTED               999
/***************************************************/
// print job
/***************************************************/
 
short CRPE_API PEOpenPrintJob (const char FAR *reportFilePath);
BOOL CRPE_API PEStartPrintJob (short printJob,
                               BOOL waitUntilDone);
BOOL CRPE_API PESetSelectionFormula (short printJob,
                                     const char FAR *formulaString);
/********************************************************************************/
// NOTE : Stored Procedures
//
// The previous Stored Procedure API Calls PEGetNParams, PEGetNthParam,
// PEGetNthParamInfo and PESetNthParam have been made obsolete.  Older 
// applications that used these API Calls will still work as before, but for new 
// development please use the new Parameter API calls below, 
//
// The Stored Procedure Parameters have now been unified with the Parameter 
// Fields.
//
// The replacements for these calls are as follows : 
//		PEGetNParams		= PEGetNParameterFields
//		PEGetNthParam		= PEGetNthParameterField
//		PEGetNthParamInfo	= PEGetParameterValueInfo
//		PESetNthParam		= PESetNthParameterField
//
// NOTE : To tell if a Parameter Field is a Stored Procedure, use the 
//		  PEGetNthParameterType or PEGetNthParameterField API Calls
//
// If you wish to SET a parameter to NULL then set the CurrentValue to CRWNULL.
// The CRWNULL is of Type String and is independant of the datatype of the 
// parameter.
//
/********************************************************************************/

/****************************************/
// Parameter field operation
/****************************************/
#define PE_WORD_LEN           2
/********************************************/
// Controlling databases
/********************************************/

// The following functions allow retrieving and updating database info
// in an opened report, so that a report can be printed using different
// session, server, database, user and/or table location settings.  Any
// changes made to the report via these functions are not permanent, and
// only last as long as the report is open.
//
// The following database functions (except for PELogOnServer and
// PELogOffServer) must be called after PEOpenPrintJob and before
// PEStartPrintJob.

// The function PEGetNTables is called to fetch the number of tables in
// the report.  This includes all PC databases (e.g. Paradox, xBase)
// as well as SQL databases (e.g. SQL Server, Oracle, Netware).

short CRPE_API PEGetNTables (short printJob);
// The function PEGetNthTableType allows the application to determine the
// type of each table.  The application can test DBType (equal to
// PE_DT_STANDARD or PE_DT_SQL), or test the database DLL name used to
// create the report.  DLL names have the following naming convention:
//     - PDB*.DLL for standard (non-SQL) databases,
//     - PDS*.DLL for SQL databases.
//
// In the case of ODBC (PDSODBC.DLL) the DescriptiveName includes the
// ODBC data source name.

#define PE_WORD_LEN          2
#define PE_DLL_NAME_LEN      64
#define PE_FULL_NAME_LEN     256
#define PE_DT_STANDARD               1
#define PE_DT_SQL                    2
#define PE_DT_SQL_STORED_PROCEDURE   3
typedef struct PETableType
{
    // Initialize to PE_SIZEOF_TABLE_TYPE.
    WORD StructSize;

    // All strings are null-terminated.
    char DLLName [PE_DLL_NAME_LEN];
    char DescriptiveName [PE_FULL_NAME_LEN];

    WORD DBType;
}PETableType;
#define PE_SIZEOF_TABLE_TYPE (sizeof (PETableType))
BOOL  CRPE_API PEGetNthTableType (short printJob,
                                  short tableN,
                                  PETableType FAR *tableType);
#define PE_SESS_USERID_LEN   128
#define PE_SESS_PASSWORD_LEN 128
typedef struct PESessionInfo
{
    // Initialize to PE_SIZEOF_SESSION_INFO.
    WORD StructSize;

    // All strings are null-terminated.
    char UserID [PE_SESS_PASSWORD_LEN];

    // Password is undefined when getting information from report.
    char Password [PE_SESS_PASSWORD_LEN];

    // SessionHandle is undefined when getting information from report.
    // When setting information, if it is = 0 the UserID and Password
    // settings are used, otherwise the SessionHandle is used.
    DWORD SessionHandle;
}
    PESessionInfo;
#define PE_SIZEOF_SESSION_INFO (sizeof (PESessionInfo))
BOOL  CRPE_API PEGetNthTableSessionInfo (short printJob,
                                         short tableN,
                                         PESessionInfo FAR *sessionInfo);
BOOL  CRPE_API PESetNthTableSessionInfo (short printJob,
                                         short tableN,
                                         PESessionInfo FAR *sessionInfo,
                                         BOOL propagateAcrossTables);
// Logging on is performed when printing the report, but the correct
// log on information must first be set using PESetNthTableLogOnInfo.
// Only the password is required, but the server, database, and
// user names may optionally be overriden as well.
//
// If the parameter propagateAcrossTables is TRUE, the new log on info
// is also applied to any other tables in this report that had the
// same original server and database names as this table.  If FALSE
// only this table is updated.
//
// Logging off is performed automatically when the print job is closed

#define PE_SERVERNAME_LEN    128
#define PE_DATABASENAME_LEN  128
#define PE_USERID_LEN        128
#define PE_PASSWORD_LEN      128
typedef struct PELogOnInfo
{
    // Initialize to PE_SIZEOF_LOGON_INFO.
    WORD StructSize;

    // For any of the following values an empty string ("") means to use
    // the value already set in the report.  To override a value in the
    // report use a non-empty string (e.g. "Server A").  All strings are
    // null-terminated.
    //
    // For Netware SQL, pass the dictionary path name in ServerName and
    // data path name in DatabaseName.
    char ServerName [PE_SERVERNAME_LEN];
    char DatabaseName [PE_DATABASENAME_LEN];
    char UserID [PE_USERID_LEN];

    // Password is undefined when getting information from report.
    char Password [PE_PASSWORD_LEN];
}PELogOnInfo;
#define PE_SIZEOF_LOGON_INFO (sizeof (PELogOnInfo))
BOOL  CRPE_API PEGetNthTableLogOnInfo (short printJob,
                                       short tableN,
                                       PELogOnInfo FAR *logOnInfo);
BOOL  CRPE_API PESetNthTableLogOnInfo (short printJob,
                                       short tableN,
                                       PELogOnInfo FAR *logOnInfo,
                                       BOOL propagateAcrossTables);
// A table's location is fetched and set using PEGetNthTableLocation and
// PESetNthTableLocation.  This name is database-dependent, and must be
// formatted correctly for the expected database.  For example:
//     - Paradox: "c:\crw\ORDERS.DB"
//     - SQL Server: "publications.dbo.authors"

#define PE_TABLE_LOCATION_LEN      256
#define PE_CONNECTION_BUFFER_LEN   512
typedef struct PETableLocation
{
    // Initialize to PE_SIZEOF_TABLE_LOCATION.
    WORD StructSize;

    // String is null-terminated.
    char Location [PE_TABLE_LOCATION_LEN];
    char SubLocation[PE_TABLE_LOCATION_LEN];
    char ConnectBuffer[PE_CONNECTION_BUFFER_LEN];    //Connection Info for attached tables
}PETableLocation;
#define PE_SIZEOF_TABLE_LOCATION (sizeof (PETableLocation))
BOOL  CRPE_API PEGetNthTableLocation (short printJob,
                                      short tableN,
                                      PETableLocation FAR *location);
BOOL  CRPE_API PESetNthTableLocation (short printJob,
                                      short tableN,
                                      PETableLocation FAR *location);
// The function PETestNthTableConnectivity tests whether a database
// table's settings are valid and ready to be reported on.  It returns
// true if the database session, log on, and location info is all
// correct.
//
// This is useful, for example, in prompting the user and testing a
// server password before printing begins.
//
// This function may require a significant amount of time to complete,
// since it will first open a user session (if required), then log onto
// the database server (if required), and then open the appropriate
// database table (to test that it exists).  It does not read any data,
// and closes the table immediately once successful.  Logging off is
// performed when the print job is closed.
//
// If it fails in any of these steps, the error code set indicates
// which database info needs to be updated using functions above:
//    - If it is unable to begin a session, PE_ERR_DATABASESESSION is set,
//      and the application should update with PESetNthTableSessionInfo.
//    - If it is unable to log onto a server, PE_ERR_DATABASELOGON is set,
//      and the application should update with PESetNthTableLogOnInfo.
//    - If it is unable open the table, PE_ERR_DATABASELOCATION is set,
//      and the application should update with PESetNthTableLocation.

BOOL  CRPE_API PETestNthTableConnectivity (short printJob,
                                           short tableN);
// PELogOnServer and PELogOffServer can be called at any time to log on
// and off of a database server.  These functions are not required if
// function PESetNthTableLogOnInfo above was already used to set the
// password for a table.
//
// These functions require a database DLL name, which can be retrieved
// using PEGetNthTableType above.
//
// This function can also be used for non-SQL tables, such as password-
// protected Paradox tables.  Call this function to set the password
// for the Paradox DLL before beginning printing.
//
// Note: When printing using PEStartPrintJob the ServerName passed in
// PELogOnServer must agree exactly with the server name stored in the
// report.  If this is not true use PESetNthTableLogOnInfo to perform
// logging on instead.

BOOL CRPE_API PELogOnServer (const char FAR *dllName,
                             PELogOnInfo FAR *logOnInfo);
BOOL CRPE_API PELogOffServer (const char FAR *dllName,
                              PELogOnInfo FAR *logOnInfo);
BOOL CRPE_API PELogOnSQLServerWithPrivateInfo (const char FAR *dllName,
                                               void FAR *privateInfo);
/***************************************/
// Overriding SQL query in report
/***************************************/
//
// PEGetSQLQuery () returns the same query as appears in the Show SQL Query
// dialog in CRW, in syntax specific to the database driver you are using.
//
// PESetSQLQuery () is mostly useful for reports with SQL queries that
// were explicitly edited in the Show SQL Query dialog in CRW, i.e. those
// reports that needed database-specific selection criteria or joins.
// (Otherwise it is usually best to continue using function calls such as
// PESetSelectionFormula () and let CRW build the SQL query automatically.)
//
// PESetSQLQuery () has the same restrictions as editing in the Show SQL
// Query dialog; in particular that changes are accepted in the FROM and
// WHERE clauses but ignored in the SELECT list of fields.

BOOL CRPE_API PEGetSQLQuery (short printJob,
                             HANDLE FAR *textHandle,
                             short  FAR *textLength);
BOOL CRPE_API PESetSQLQuery (short printJob,
                             const char FAR *queryString);
BOOL CRPE_API PEVerifyDatabase(short printJob);
// constants returned from PECheckNthTableDifferences, can be any
// combination of the following:
#define PE_TCD_OKAY                          0x00000000
#define PE_TCD_DATABASENOTFOUND              0x00000001
#define PE_TCD_SERVERNOTFOUND                0x00000002
#define PE_TCD_SERVERNOTOPENED               0x00000004
#define PE_TCD_ALIASCHANGED                  0x00000008
#define PE_TCD_INDEXESCHANGED                0x00000010
#define PE_TCD_DRIVERCHANGED                 0x00000020
#define PE_TCD_DICTIONARYCHANGED             0x00000040
#define PE_TCD_FILETYPECHANGED               0x00000080
#define PE_TCD_RECORDSIZECHANGED             0x00000100
#define PE_TCD_ACCESSCHANGED                 0x00000200
#define PE_TCD_PARAMETERSCHANGED             0x00000400
#define PE_TCD_LOCATIONCHANGED               0x00000800
#define PE_TCD_DATABASEOTHER                 0x00001000
#define PE_TCD_NUMFIELDSCHANGED              0x00010000
#define PE_TCD_FIELDOTHER                    0x00020000
#define PE_TCD_FIELDNAMECHANGED              0x00040000
#define PE_TCD_FIELDDESCCHANGED              0x00080000
#define PE_TCD_FIELDTYPECHANGED              0x00100000
#define PE_TCD_FIELDSIZECHANGED              0x00200000
#define PE_TCD_NATIVEFIELDTYPECHANGED        0x00400000
#define PE_TCD_NATIVEFIELDOFFSETCHANGED      0x00800000
#define PE_TCD_NATIVEFIELDSIZECHANGED        0x01000000
#define PE_TCD_FIELDDECPLACESCHANGED         0x02000000
typedef struct PETableDifferenceInfo
{
    WORD StructSize;
    DWORD tableDifferences;                 // any combination of PE_TCD_*
    DWORD reserved1;                        // reserved - do not use
    DWORD reserved2;                        // reserved - do not use
} PETableDifferenceInfo;
#define PE_SIZEOF_TABLE_DIFFERENCE_INFO (sizeof (PETableDifferenceInfo))
// Not implemented for reports based on dictionary returns PE_ERR_NOTIMPLEMENTED
BOOL CRPE_API PECheckNthTableDifferences (short printJob, short tableN, PETableDifferenceInfo FAR *tabledifferenceinfo);
// Field mapping types
#define PE_FM_AUTO_FLD_MAP          0   //Automatic field name mapping
                                        //NOTE : unmapped report fields will be removed
#define PE_FM_CRPE_PROMPT_FLD_MAP   1   //CRPE provides dialog box to map field manually
                                        //User needs to activate the PE_MAPPING_FIELD_EVENT
                                        //and define a callback function

BOOL CRPE_API PESetFieldMappingType(short printJob,
                                    WORD mappingType  //use PE_FM_ constant
                                    );
   

BOOL CRPE_API PEGetFieldMappingType(short printJob,
                                    WORD FAR * mappingType //use PE_FM_ constant
                                    );